--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="font-exo-2">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- fontFamily -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/07f60ceea9.js" crossorigin="anonymous"></script>
+
+
     <link rel="icon" type="image/svg+xml" href="./src/assets/react.svg" />
     <title>Knowledge Cafe</title>
   </head>
-  <body class="w-9/12 mx-auto my-4">
+  <body class="w-9/12 mx-auto my-4 font-exo-2">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
